test/fail/bad-actor-import1.mo
//MOC-FLAG --actor-idl bad-actor-import1
//MOC-FLAG --actor-alias foo lg264-qjkae

import imported1 "ic:lg264-qjkae";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp

